feat(placeholders): resolve from headers, XML bodies, and nested paths
Widens what a ${...} placeholder can reach and hardens the surrounding
plumbing. Committed as one change because the pieces are interdependent:
ContentType gained a real matches()/guessFrom() API that the extractor,
the binary responses, and the front controller all build on.

- placeholders now resolve against request headers and XML bodies, not
  just query params and JSON; names match case-insensitively so
  ${X-Tenant} finds the header the JDK server rewrote to X-tenant
- JsonFlattener becomes BodyFlattener: dotted paths for nested fields
  and indexes for array elements, over both JSON and XML, on private
  mappers so request parsing ignores test-registered serializer config
- precedence is explicit and documented: path captures > body fields >
  query params > headers
- ContentType.matches() compares media types ignoring parameters, so
  "application/json; charset=UTF-8" is recognised
- binary responses (thenReturnFile*) bypass substitution and carry a
  MIME type guessed from the file extension
- LogSafe masks sensitive headers and truncates bodies on the trace path
- README documents the placeholder sources, precedence, and the
  leave-as-is behaviour for unmatched names

228 tests pass.