@@ -1,7 +1,6 @@
 package org.simulatest.restmock;
 
 import java.time.Instant;
-import java.util.Collections;
 import java.util.Map;
 import java.util.List;
 
@@ -11,9 +10,11 @@ import java.util.List;
  * {@code path} is the path component only (no query string); {@code query} is
  * the raw query string or {@code null} if absent. {@code body} is the request
  * body decoded as UTF-8; for empty bodies it is the empty string. {@code headers}
- * is unmodifiable; keys are canonicalized to first-letter-uppercase form
- * ({@code Content-Type}, {@code User-Agent}) by the JDK HTTP server, so look
- * them up using that exact case.
+ * is unmodifiable; the JDK HTTP server lowercases each name and capitalizes only
+ * its first letter, so a header sent as {@code Content-Type} is stored as
+ * {@code Content-type} and {@code X-Tenant} as {@code X-tenant}. Look them up
+ * using that exact case, or use {@code ${name}} in a response body, which
+ * resolves header names case-insensitively.
  */
 public record ReceivedRequest(
 	HttpMethod method,
@@ -25,7 +26,7 @@ public record ReceivedRequest(
 ) {
 
 	public ReceivedRequest {
-		headers = Collections.unmodifiableMap(headers);
+		headers = Map.copyOf(headers);
 	}
 
 }
